update staff Lausanne

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -272,19 +272,35 @@
         </article>
 
         <article class="frame">
-            <h1>Prayer team</h1>
-
-            <p>Mélanie Gerber</p>
-
-            <a href="mailto:equipiersdepriere@gc-lausanne.org">equipiersdepriere@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
             <h1>New Life</h1>
 
             <p>Benoît Jaccaud</p>
 
             <a href="mailto:newlife@gc-lausanne.org">newlife@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Prayer team</h1>
+
+            <p>Georges and Mireille Schlatter</p>
+
+            <a href="mailto:equipiersdepriere@gc-lausanne.org">equipiersdepriere@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Gospel Service</h1>
+
+            <p>Véronique</p>
+
+            <a href="mailto:service@gc-lausanne.org">service@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Gospel in the Street</h1>
+
+            <p>Anthony Siounath</p>
+
+            <a href="mailto:street@gc-lausanne.org">street@gc-lausanne.org</a>
         </article>
 
 
