--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/fr/about.html.twig
@@ -178,6 +178,14 @@
         </article>
 
         <article class="frame">
+            <h1>Accueil</h1>
+
+            <p>Florence Vuffray</p>
+
+            <a href="mailto:welcome@gc-lacote.org">welcome@gc-lacote.org</a>
+        </article>
+
+        <article class="frame">
             <h1>Communication</h1>
 
             <p>Karen Dufour</p>
@@ -199,14 +207,6 @@
             <p>Marc Vuffray</p>
 
             <a href="mailto:equipiersdepriere@gc-lacote.org">equipiersdepriere@gc-lacote.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Logistique</h1>
-
-            <p>Florence Vuffray</p>
-
-            <a href="mailto:logistique@gc-lacote.org">logistique@gc-lacote.org</a>
         </article>
 
 
