--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/youth.html.twig
@@ -73,6 +73,8 @@
             <p>Des petites chansons, des histoires, des jeux… tout pour ravir les yeux et le cœur de ces tout-petits
                 !</p>
 
+            <p>Un repas léger sera servi aux enfants durant la rencontre, de manière à vous décharger lors du retour dans vos foyers.</p>
+
             {% if dates_minis|length %}
 
                 <h3>Prochaines dates</h3>
@@ -117,6 +119,8 @@
                 histoires de la Bible passionnantes, se feront des amis et pourront faire des jeux et des bricolages.
                 Parce que les enfants sont l'Eglise d’aujourd’hui!</p>
 
+            <p>Un repas léger sera servi aux enfants durant la rencontre, de manière à vous décharger lors du retour dans vos foyers.</p>
+
             {% if dates_kids|length %}
 
                 <h3>Prochaines dates</h3>
@@ -158,6 +162,8 @@
             <p>Les Heroes, c’est l’endroit à ne pas manquer pour les jeunes de la 5ème à la 8ème. Expérimenter la
                 présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
                 nouvelles amitiés sont des points clés pour cette équipe.</p>
+
+            <p>Un repas léger sera servi aux enfants durant la rencontre, de manière à vous décharger lors du retour dans vos foyers.</p>
 
 
             {% if dates_heroes|length %}
@@ -201,6 +207,8 @@
             <p>LOUANGE, SKETCH, ANIMATION, COLLATION et pleins d'autres surprises encore !</p>
             <p>Une équipe de jeunes motivés est à l’œuvre pour concocter un programme délirant qui motivera vos enfants
                 et les aidera à bien commencer la semaine!</p>
+
+            <p>Un repas léger sera servi aux enfants durant la rencontre, de manière à vous décharger lors du retour dans vos foyers.</p>
 
 
             {% if dates_fullPack|length %}
