--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/fr/about.html.twig
@@ -148,7 +148,7 @@
         <article class="frame">
             <h1>Gospel Kids</h1>
 
-            <p>Laure Tellenbach</p>
+            <p>Sabine Reichenbach</p>
 
             <a href="mailto:kids@gc-lacote.org">kids@gc-lacote.org</a>
         </article>
@@ -159,6 +159,15 @@
             <p>Diana Bideaux</p>
 
             <a href="mailto:teens@gc-lacote.org">teens@gc-lacote.org</a>
+        </article>
+
+
+        <article class="frame">
+            <h1>Gospel Youth</h1>
+
+            <p>Karen Dufour</p>
+
+            <a href="mailto:youth@gc-lacote.org">youth@gc-lacote.org</a>
         </article>
 
         <article class="frame">
@@ -191,14 +200,6 @@
             <p>Karen Dufour</p>
 
             <a href="mailto:communication@gc-lacote.org">communication@gc-lacote.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Technique</h1>
-
-            <p>Olivier Tellenbach</p>
-
-            <a href="mailto:technique@gc-lacote.org">technique@gc-lacote.org</a>
         </article>
 
         <article class="frame">
