update lausanne about info

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -125,12 +125,12 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
-                     alt="Marc Gallay"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/WernerLehmann.jpg') }}"
+                     alt="Werner Lehmann"/>
                 <section>
-                    <h1>Marc et Christine Gallay</h1>
+                    <h1>Werner Lehmann</h1>
 
-                    <p>Pasteurs</p>
+                    <p>Responsable principal</p>
                 </section>
 
             </article>
@@ -210,6 +210,7 @@
         <h2 class="slogan">Le staff du Gospel Center Lausanne est une équipe
             dynamique qui désire effectuer un travail de qualité.</h2>
 
+        {#
         <article class="frame">
             <h1>équipe pastorale</h1>
 
@@ -217,6 +218,7 @@
 
             <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
         </article>
+        #}
 
         <article class="frame">
             <h1>Coordination</h1>
@@ -299,7 +301,7 @@
         </article>
 
         <article class="frame">
-            <h1>Gospel in the Street</h1>
+            <h1>Gospel in the Streets</h1>
 
             <p>Anthony Siounath</p>
 
