--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -112,12 +112,12 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
-                     alt="Marc Gallay"/>
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/WernerLehmann.jpg') }}"
+                     alt="Werner Lehmann"/>
                 <section>
-                    <h1>Marc & Christine Gallay</h1>
+                    <h1>Werner Lehmann</h1>
 
-                    <p>Pastors</p>
+                    <p>Senior pastor</p>
                 </section>
 
             </article>
@@ -197,6 +197,7 @@
         <h2 class="slogan">The staff of the Gospel Center Lausanne is a dynamic team that puts effort towards quality
             work.</h2>
 
+        {#
         <article class="frame">
             <h1>Pastoral Team</h1>
 
@@ -204,6 +205,7 @@
 
             <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
         </article>
+        #}
 
         <article class="frame">
             <h1>Coordination</h1>
@@ -286,7 +288,7 @@
         </article>
 
         <article class="frame">
-            <h1>Gospel in the Street</h1>
+            <h1>Gospel in the Streets</h1>
 
             <p>Anthony Siounath</p>
 
